--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,7 @@
     </style>
 
     <style name="Theme._7MinuteWorkoutApp" parent="Base.Theme._7MinuteWorkoutApp" />
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary">
+        <item name="colorControlNormal">@color/toolbar_color_control</item>
+    </style>
 </resources>
